--- a/package.json
+++ b/package.json
@@ -7,12 +7,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "native-base": "^2.12.1",
     "react": "16.6.3",
-    "react-native": "0.58.6"
+    "react-native": "0.58.6",
+    "react-native-gesture-handler": "^1.1.0",
+    "react-navigation": "^3.3.2",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "24.4.0",
+    "babel-plugin-module-resolver": "^3.2.0",
     "jest": "24.4.0",
     "metro-react-native-babel-preset": "0.53.0",
     "react-test-renderer": "16.6.3"
